objects/DV_PAA__Program_Level_Activity_Point_Association__c.object
<CustomObject>
    <fields>
        <fullName>DV_PAA__Channel_Program_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Program Level</label>
        <referenceTo>ChannelProgramLevel</referenceTo>
        <relationshipLabel>Program Level Activity Point Association</relationshipLabel>
        <relationshipName>Program_Level_Activity_Point_Association</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DV_PAA__Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick to showcase this as a featured Activity for this Channel Program Level</inlineHelpText>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DV_PAA__Partner_Activity_Type__c</fullName>
        <label>Partner Activity Type</label>
        <referenceTo>DV_PAA__Partner_Activity_Type__c</referenceTo>
        <relationshipLabel>Program Level Activity Point Association</relationshipLabel>
        <relationshipName>Program_Level_Activity_Point_Association</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DV_PAA__Points__c</fullName>
        <label>Points</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Program Level Activity Point Association</label>
    <listViews>
        <fullName>DV_PAA__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PLAP-{000000}</displayFormat>
        <label>Program Level Activity Point Association</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Level Activity Point Association</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>